# diyvps

./: .gitignore  pyproject.toml  requirements.txt
backend/: README.md
backend/booking/: models.py  serializers.py  views.py
backend/booking/migrations/: 0001_initial.py  0002_alter_machine_name_alter_machine_status.py
backend/diyvps/: settings.py  wsgi.py
backend/users/: views.py
src/accounts/: serializers.py  urls.py  views.py
src/booking/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  states.py  urls.py  views.py
src/booking/migrations/: 0003_alter_booking_id_alter_machine_id_and_more.py  0004_booking_booked_alter_machine_status.py  0005_alter_machine_operatingsystem.py  0006_remove_booking_booked.py  0007_rename_bookedby_booking_booked_by_and_more.py
src/diyvps/: asgi.py  manage.py  settings.py  urls.py
src/users/: serializers.py  urls.py
